--- a/_posts/2022-12-02-Sup.md
+++ b/_posts/2022-12-02-Sup.md
@@ -1,5 +1,5 @@
 ---
-title: Sup!
+title: Testing my new website!
 date: 2022-12-02-15:35:00
 categories: [Test, Hardware]
 Tags: [test, hardware, electronics] #should always be lowercase
@@ -9,19 +9,13 @@ Tags: [test, hardware, electronics] #should always be lowercase
 
 ## Hello! This is my first test on this website!
 
-#### I see the text appears to be smaller now.. hmm
-
 ##### lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus.
 
-## Yup!
-
-##### lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus.lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus. lorem ipsum dolor sit amet consectetur adipisicing elit. Porro doloribus sint dolorum maiores obcaecati a necessitatibus incidunt eos distinctio sit dolor nulla laborum repudiandae quis quos, veniam rerum iste voluptatibus.
-
-* Check this out now
 * Unordered list
 
-#### You want code??
+### Lets try some code
 
+#### C
 
 ```c
 #include <stdio.h>
@@ -31,7 +25,7 @@ return 0;
 }
 ```
 
-#### Oh you want to know if we got javascript as well? Why yes!
+#### Javascript
 
 ```javascript
 console.log('Hello World!')
