--- a/_posts/2022-12-05-Test-two.md
+++ b/_posts/2022-12-05-Test-two.md
@@ -1,8 +1,8 @@
 ---
-title: Test2
-date: 2022-12-05-15:35:00
+title: Test two
+date: 2022-12-05-12:35:00
 categories: [Test, Hardware]
 Tags: [test, hardware, electronics] #should always be lowercase
 ---
 
-# Testing new setup
+## Testing new setup
