--- a/_posts/2022-12-05-Test-two.md
+++ b/_posts/2022-12-05-Test-two.md
@@ -6,3 +6,5 @@ Tags: [test, hardware, electronics] #should always be lowercase
 ---
 
 ## Testing new setup
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4Ix88ISdULbNjCs1E9BPqG?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
