--- a/_posts/2022-12-05-Welcome.md
+++ b/_posts/2022-12-05-Welcome.md
@@ -7,7 +7,7 @@ Tags: [introduction, music] #should always be lowercase
 
 ## Welcome to my Website!
 
-With the basics of this website now set up and properly configurated, i am finally able to run a welcome message, and what better introduction than to test out this spotify feature. I hope you like the music, and i will be looking forward to seeing what will become of the site! :)
+With the basics of this website now set up and properly configured, i am finally able to run a welcome message, and what better introduction than to test out this spotify feature. I hope you like the music, and i will be looking forward to seeing what will become of the site! :)
 
 
 
